# badminton-video-editor

./: .gitignore  README.md  pyproject.toml
.github/skills/badminton-video-editor/: SKILL.md
src/badminton_editor/: __init__.py  cli.py  pipeline.py  tools.py  video_preprocessor.py
src/badminton_editor/analyzers/: audio_analyzer.py  frame_analyzer.py  rally_segmenter.py
src/badminton_editor/editors/: video_editor.py
